[Flask_Essential_Training] support form to get user input and POST request

--- a/Flask_Essential_Training/url-shortener/templates/home.html
+++ b/Flask_Essential_Training/url-shortener/templates/home.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is Home</title>
+    <title>This is URL Shortener</title>
 </head>
 <body>
-    <h1>This is Home!</h1>
-        <h2>{{ name }}</h2>
+<h1>URL Shortener</h1>
+
+<form action="your-url" method="post">
+    <label for="url">Website URL</label>
+    <input name="url" type="url" value="" required>
+    <br>
+    <label for="code">Short Name </label>
+    <input name="code" type="text" value="" required>
+    <br>
+    <input type="submit" value="Shorten">
+</form>
 </body>
 </html>
