[Flask_Essential_Training] now support session

--- a/Flask_Essential_Training/url-shortener/templates/home.html
+++ b/Flask_Essential_Training/url-shortener/templates/home.html
@@ -35,5 +35,15 @@
     <input type="submit" value="Shorten">
 </form>
 
+{%if codes%}
+<h1>Codes you have created</h1>
+<ul>
+    {%for code in codes%}
+    <li><a href="{{url_for('redirect_to_url',code=code)}}">{{code}}</a></li>
+    {% endfor %}
+</ul>
+{% endif %}
+
+
 </body>
 </html>
