--- a/Flask_Essential_Training/url-shortener/templates/page_not_found.html
+++ b/Flask_Essential_Training/url-shortener/templates/page_not_found.html
@@ -1,3 +1,15 @@
+
+{% extends 'base.html' %}
+
+{% block title %}
+<meta charset="UTF-8">
+<title>Hi welcome Zhentao</title>
+{% endblock %}
+
+{% block main %}
+
 <h1>Page not Found</h1>
 <p>We couldn't find what you are looking for. Come visit our homepage :)</p>
 <p><a href="{{ url_for('home') }}">Home</a></p>
+
+{% endblock%}
