--- a/Flask_Essential_Training/url-shortener/templates/page_not_found.html
+++ b/Flask_Essential_Training/url-shortener/templates/page_not_found.html
@@ -1,15 +1,17 @@
-
 {% extends 'base.html' %}
 
-{% block title %}
-<meta charset="UTF-8">
-<title>Hi welcome Zhentao</title>
-{% endblock %}
+{% block title %}Page Not Found{% endblock %}
 
 {% block main %}
 
-<h1>Page not Found</h1>
-<p>We couldn't find what you are looking for. Come visit our homepage :)</p>
-<p><a href="{{ url_for('home') }}">Home</a></p>
 
-{% endblock%}
+<div class="container text-center">
+  <h1 class="jumbotron-heading">Page Not Found</h1>
+  <p class="lead">We couldn't find what you are looking for. Come vist our homepage :)</p>
+  <p>
+    <a href="{{ url_for('home') }}"><button class="btn btn-primary my-2">Home</button></a>
+  </p>
+</div>
+
+
+{% endblock %}
